--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "bootstrap": "^4.1.3",
     "browserify": "^16.2.3",
+    "cached-path-relative": "^1.0.2",
     "highlight.js": "^9.13.1",
     "jquery": "^3.3.1",
     "parcelify": "^2.2.0",
